--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.5",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@reduxjs/toolkit": "^1.8.3",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.6",
