--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-modal-video": "^2.0.0",
     "react-paginate": "^8.1.3",
     "react-photo-view": "^1.2.6",
+    "react-player": "^2.16.0",
     "react-redux": "^8.0.2",
     "react-responsive-masonry": "^2.1.5",
-    "react-slick": "^0.29.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^9.0.7",
     "redux-persist": "^6.0.0",
     "sass": "^1.53.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.3.2",
     "yup": "^0.32.11"
   },
